🔧 Fix layout broken on small device

--- a/server/src/client/src/pages/ImageLoad/ImageLoad.module.scss
+++ b/server/src/client/src/pages/ImageLoad/ImageLoad.module.scss
@@ -32,7 +32,9 @@
         align-items: center;
 
         img {
+            max-width: 100%;
             height: 300px;
+            object-fit: contain;
         }
 
         span {
